# jxl-enc-comp

./: .gitignore  Justfile  README.md  pyproject.toml
docs/: 2026-04-25-INITIAL-PLAN.md  stage-profiling-assessment.md
src/jxl_parity/: __init__.py  cli.py  codecs.py  corpus.py  flamegraph.py  metrics.py  profiler.py  reports.py  runner.py
tests/: test_cli.py  test_corpus.py  test_flamegraph.py  test_metrics.py  test_profiler.py  test_reports.py  test_runner.py
